<package>
  <name>std_srvs</name>
  <version>1.11.3</version>
  <description>Common service definitions.</description>
  <maintainer email="michel@ekumenlabs.com">Michel Hidalgo</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/std_srvs</url>
  <author>Morgan Quigley</author>
  <author email="dthomas@osrfoundation.org">Dirk Thomas</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
</package>
